--- a/spnews/website/templates/index.html
+++ b/spnews/website/templates/index.html
@@ -1,5 +1,254 @@
 {% extends 'base.html' %}
-
 {% block content %}
+<div class="main_image-title">
+    <div class="box1">
+        <div class="imageWithTitle">
+            <img src="https://plus.unsplash.com/premium_photo-1664279047458-ace1fa02d6d7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" class="titleImg img-fluid" alt="...">
+            <div class="image-title">
+                <h4>मजकूर शीर्षक</h4>
+                <p>पहिल्या स्लाइडसाठी काही प्रतिनिधी प्लेसहोल्डर सामग्री.</p>
+            </div>
+        </div>
+    </div>
+    <div class="box2">
+        <div class="custom-image-with-title">
+            <section class="section1">
+                <img src="https://plus.unsplash.com/premium_photo-1664279047458-ace1fa02d6d7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" class="img-thumbnail" alt="...">
+            </section>
+            <section class="section2">
+                <p>आम्ही वेबसाइटवरील जाहिराती स्वीकारू शकतो. जाहिरातींसाठी आमच्याशी खालील क्रमांक १२३४५६७८८९ वर संपर्क साधा</p>
+            </section>
+        </div>
+        <div class="custom-image-with-title">
+            <section class="section1">
+                <img src="https://plus.unsplash.com/premium_photo-1664279047458-ace1fa02d6d7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" class="img-thumbnail" alt="...">
+            </section>
+            <section class="section2">
+                <p>आम्ही वेबसाइटवरील जाहिराती स्वीकारू शकतो. जाहिरातींसाठी आमच्याशी खालील क्रमांक १२३४५६७८८९ वर संपर्क साधा</p>
+            </section>
+        </div>
+    </div>
+</div>
+<div class="adSection1">
+    <div class="card">
+        <div class="card-header">
+            जाहिरात
+        </div>
+        <div class="card-body">
+            <h5 class="card-title">जाहिरात विभाग</h5>
+            <p class="card-text">आम्ही वेबसाइटवरील जाहिराती स्वीकारू शकतो. जाहिरातींसाठी आमच्याशी खालील क्रमांक १२३४५६७८८९ वर संपर्क साधा</p>
+            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+        </div>
+    </div>
+</div>
+</div>
+
+
+<!-- Top News Section -->
+<div class="topNewsSection">
+    <div class="topNewsTitle">
+        <h2>शीर्ष बातम्या</h2>
+    </div>
+    <div class="news">
+        <div class="nCards">
+            <div class="card newsCard">
+                <img src="https://plus.unsplash.com/premium_photo-1664279047458-ace1fa02d6d7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">बातमीचे शीर्षक</h5>
+                    <p class="card-text">अतिरिक्त सामग्रीसाठी नैसर्गिक लीड-इन म्हणून खाली समर्थन मजकूर असलेले हे एक विस्तृत कार्ड आहे. ही सामग्री थोडी मोठी आहे.</p>
+                </div>
+                <div class="card-footer">
+                    <small class="text-body-secondary">3 मिनिटांपूर्वी शेवटचे अपडेट केले</small>
+                </div>
+            </div>
+            <div class="card newsCard">
+                <img src="https://plus.unsplash.com/premium_photo-1664279047458-ace1fa02d6d7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">बातमीचे शीर्षक</h5>
+                    <p class="card-text">अतिरिक्त सामग्रीसाठी नैसर्गिक लीड-इन म्हणून खाली समर्थन मजकूर असलेले हे एक विस्तृत कार्ड आहे. ही सामग्री थोडी मोठी आहे.</p>
+                </div>
+                <div class="card-footer">
+                    <small class="text-body-secondary">3 मिनिटांपूर्वी शेवटचे अपडेट केले</small>
+                </div>
+            </div>
+            <div class="card newsCard">
+                <img src="https://plus.unsplash.com/premium_photo-1664279047458-ace1fa02d6d7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">बातमीचे शीर्षक</h5>
+                    <p class="card-text">अतिरिक्त सामग्रीसाठी नैसर्गिक लीड-इन म्हणून खाली समर्थन मजकूर असलेले हे एक विस्तृत कार्ड आहे. ही सामग्री थोडी मोठी आहे.</p>
+                </div>
+                <div class="card-footer">
+                    <small class="text-body-secondary">3 मिनिटांपूर्वी शेवटचे अपडेट केले</small>
+                </div>
+            </div>
+            <div class="card newsCard">
+                <img src="https://plus.unsplash.com/premium_photo-1664279047458-ace1fa02d6d7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">बातमीचे शीर्षक</h5>
+                    <p class="card-text">अतिरिक्त सामग्रीसाठी नैसर्गिक लीड-इन म्हणून खाली समर्थन मजकूर असलेले हे एक विस्तृत कार्ड आहे. ही सामग्री थोडी मोठी आहे.</p>
+                </div>
+                <div class="card-footer">
+                    <small class="text-body-secondary">3 मिनिटांपूर्वी शेवटचे अपडेट केले</small>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+  <!-- Horizontal Adds section -->
+  <div class="adSection1">
+    <div class="card">
+        <div class="card-header">
+            जाहिरात
+        </div>
+        <div class="card-body custom-card-body">
+            <!-- <h5 class="card-title">जाहिरात विभाग</h5> -->
+            <p class="card-text"><img src="https://plus.unsplash.com/premium_photo-1664279047458-ace1fa02d6d7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" id="custom-ads-img" class="img-fluid custom-img-fluid" alt=""></p>
+            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+        </div>
+    </div>
+</div>
+</div>
+
+<!-- Top News Section -->
+<div class="topNewsSection">
+    <div class="topNewsTitle">
+        <h2>Sports</h2>
+    </div>
+    <div class="news">
+        <div class="nCards">
+            <div class="card newsCard">
+                <img src="https://plus.unsplash.com/premium_photo-1664279047458-ace1fa02d6d7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">बातमीचे शीर्षक</h5>
+                    <p class="card-text">अतिरिक्त सामग्रीसाठी नैसर्गिक लीड-इन म्हणून खाली समर्थन मजकूर असलेले हे एक विस्तृत कार्ड आहे. ही सामग्री थोडी मोठी आहे.</p>
+                </div>
+                <div class="card-footer">
+                    <small class="text-body-secondary">3 मिनिटांपूर्वी शेवटचे अपडेट केले</small>
+                </div>
+            </div>
+            <div class="card newsCard">
+                <img src="https://plus.unsplash.com/premium_photo-1664279047458-ace1fa02d6d7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">बातमीचे शीर्षक</h5>
+                    <p class="card-text">अतिरिक्त सामग्रीसाठी नैसर्गिक लीड-इन म्हणून खाली समर्थन मजकूर असलेले हे एक विस्तृत कार्ड आहे. ही सामग्री थोडी मोठी आहे.</p>
+                </div>
+                <div class="card-footer">
+                    <small class="text-body-secondary">3 मिनिटांपूर्वी शेवटचे अपडेट केले</small>
+                </div>
+            </div>
+            <div class="card newsCard">
+                <img src="https://plus.unsplash.com/premium_photo-1664279047458-ace1fa02d6d7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">बातमीचे शीर्षक</h5>
+                    <p class="card-text">अतिरिक्त सामग्रीसाठी नैसर्गिक लीड-इन म्हणून खाली समर्थन मजकूर असलेले हे एक विस्तृत कार्ड आहे. ही सामग्री थोडी मोठी आहे.</p>
+                </div>
+                <div class="card-footer">
+                    <small class="text-body-secondary">3 मिनिटांपूर्वी शेवटचे अपडेट केले</small>
+                </div>
+            </div>
+            <div class="card newsCard">
+                <img src="https://plus.unsplash.com/premium_photo-1664279047458-ace1fa02d6d7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">बातमीचे शीर्षक</h5>
+                    <p class="card-text">अतिरिक्त सामग्रीसाठी नैसर्गिक लीड-इन म्हणून खाली समर्थन मजकूर असलेले हे एक विस्तृत कार्ड आहे. ही सामग्री थोडी मोठी आहे.</p>
+                </div>
+                <div class="card-footer">
+                    <small class="text-body-secondary">3 मिनिटांपूर्वी शेवटचे अपडेट केले</small>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Horizontal Adds section -->
+<div class="adSection1">
+    <div class="card">
+        <div class="card-header">
+            जाहिरात
+        </div>
+        <div class="card-body custom-card-body">
+            <!-- <h5 class="card-title">जाहिरात विभाग</h5> -->
+            <p class="card-text"><img src="https://plus.unsplash.com/premium_photo-1664279047458-ace1fa02d6d7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" class="img-fluid custom-img-fluid" alt=""></p>
+            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+        </div>
+    </div>
+</div>
+</div>
+
+<!-- Horizontal Adds section -->
+
+</div>
+
+<!-- Top News Section -->
+<div class="topNewsSection">
+    <div class="topNewsTitle">
+        <h2>राजकारण</h2>
+    </div>
+    <div class="news">
+        <div class="nCards">
+            <div class="card newsCard">
+                <img src="https://plus.unsplash.com/premium_photo-1664279047458-ace1fa02d6d7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">बातमीचे शीर्षक</h5>
+                    <p class="card-text">अतिरिक्त सामग्रीसाठी नैसर्गिक लीड-इन म्हणून खाली समर्थन मजकूर असलेले हे एक विस्तृत कार्ड आहे. ही सामग्री थोडी मोठी आहे.</p>
+                </div>
+                <div class="card-footer">
+                    <small class="text-body-secondary">3 मिनिटांपूर्वी शेवटचे अपडेट केले</small>
+                </div>
+            </div>
+            <div class="card newsCard">
+                <img src="https://plus.unsplash.com/premium_photo-1664279047458-ace1fa02d6d7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">बातमीचे शीर्षक</h5>
+                    <p class="card-text">अतिरिक्त सामग्रीसाठी नैसर्गिक लीड-इन म्हणून खाली समर्थन मजकूर असलेले हे एक विस्तृत कार्ड आहे. ही सामग्री थोडी मोठी आहे.</p>
+                </div>
+                <div class="card-footer">
+                    <small class="text-body-secondary">3 मिनिटांपूर्वी शेवटचे अपडेट केले</small>
+                </div>
+            </div>
+            <div class="card newsCard">
+                <img src="https://plus.unsplash.com/premium_photo-1664279047458-ace1fa02d6d7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">बातमीचे शीर्षक</h5>
+                    <p class="card-text">अतिरिक्त सामग्रीसाठी नैसर्गिक लीड-इन म्हणून खाली समर्थन मजकूर असलेले हे एक विस्तृत कार्ड आहे. ही सामग्री थोडी मोठी आहे.</p>
+                </div>
+                <div class="card-footer">
+                    <small class="text-body-secondary">3 मिनिटांपूर्वी शेवटचे अपडेट केले</small>
+                </div>
+            </div>
+            <div class="card newsCard">
+                <img src="https://plus.unsplash.com/premium_photo-1664279047458-ace1fa02d6d7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">बातमीचे शीर्षक</h5>
+                    <p class="card-text">अतिरिक्त सामग्रीसाठी नैसर्गिक लीड-इन म्हणून खाली समर्थन मजकूर असलेले हे एक विस्तृत कार्ड आहे. ही सामग्री थोडी मोठी आहे.</p>
+                </div>
+                <div class="card-footer">
+                    <small class="text-body-secondary">3 मिनिटांपूर्वी शेवटचे अपडेट केले</small>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="adSection1">
+        <div class="card">
+            <div class="card-header">
+                जाहिरात
+            </div>
+            <div class="card-body custom-card-body">
+                <!-- <h5 class="card-title">जाहिरात विभाग</h5> -->
+                <p class="card-text"><img src="https://plus.unsplash.com/premium_photo-1664279047458-ace1fa02d6d7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" class="img-fluid custom-img-fluid" alt=""></p>
+                <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Footer section -->
+<footer>
+    <div class="footerContainer">
+        <p id="copyWrite">&copy;news.com 2023</p>
+    </div>
+</footer>
+
 </html>
 {% endblock %}
