--- a/spnews/siteadmin/templates/adminreject.html
+++ b/spnews/siteadmin/templates/adminreject.html
@@ -4,22 +4,20 @@
 <link rel="stylesheet"  href="{% static 'css/reject.css' %}">
 {% endblock %}
 {% block content %}
-<div class="inbox">
-    <a href="/index.html" class="inbox-link">
+{% for item in rejectitem%}
+<div class="inbox">  
         <div class="items">
             <div class="itemInfo">
-                <h5 class="item-Para"><span class="location">Location : </span> ipsum dolor sit amet consectetur
-                    adipisicing elit. Ipsam numquam incidunt
-                    exercitationem alias odit ipsa repellendus nemo, eos dolorum? Amet?</h5>
+               
+                <h5 class="item-Para"><span class="location">{{item.location}} : </span> {{item.headding}}</h5>
                 <h6 class="item-Para">
-                    this resone why your application is rejected
-                </h6>
+                   {{item.rejectreason}}
+                </h6>            
             </div>
-
-    </a>
     <div class="respone-btn">
-        <button type="button" class="btn btn-success">Draft</button>
+        <a href="{% url 'redraft' item.id %}"><button  type="button" class="btn btn-success">Draft</button></a>
         <button type="button" class="btn btn-danger Reject-btn">Delete</button>
     </div>
 </div>
+{% endfor %}
 {% endblock %}
