--- a/spnews/siteadmin/static/css/inprocess.css
+++ b/spnews/siteadmin/static/css/inprocess.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: row;
     background-color: antiquewhite;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    margin-top: 0.9rem;
+    margin-bottom: 0.7rem;
     margin-right: 1rem;
     margin-left: 1rem;
     padding-inline: 1rem;
@@ -14,8 +14,7 @@
   12.5px 12.5px 10px rgba(0, 0, 0, 0.035),
   22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
   41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
-  100px 100px 80px rgba(0, 0, 0, 0.07)
-;
+  100px 100px 80px rgba(0, 0, 0, 0.07);
     
 }
 .inbox{
