--- a/spnews/siteadmin/templates/adminbase.html
+++ b/spnews/siteadmin/templates/adminbase.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-lg " style="background-color: #e3f2fd;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/index.html">Navbar</a>
+          <a class="navbar-brand" href="{%url 'siteadmin'%}">SP NEWS 📰</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -22,13 +22,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Draft</a>
+                <a class="nav-link active" aria-current="page" href="{%url 'draft'%}">Draft New</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/reject.html">Reject</a>
+                <a class="nav-link active" aria-current="page" href="{%url 'reject'%}">Rejected</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">In Approval</a>
+                <a class="nav-link active" aria-current="page" href="{%url 'approval'%}">In Approval</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/uploadded.html">Uploadded</a>
@@ -37,11 +37,17 @@
             <form class="d-flex">
               <div class="btn-group dropstart">
                 <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                  {% if user.is_authenticated %}
+                  <span>Hello {{ user.username }}</span>
+                  {% endif %}
                  <img src="{% static 'icons/usericon.png' %}" style="width: 20px;">
                 </button>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Logout</a></li>
-                  <li><a class="dropdown-item" href="#">Profile</a></li>
+                 
+                  <!-- <li><a class="dropdown-item" href="#">View Profile</a></li> -->
+                  
+                  <li><a class="dropdown-item" href="{%url 'logout'%}">Logout</a></li>
+                  
                   <!-- <li><a class="dropdown-item" href="#">Menu item</a></li> -->
                 </ul>
               </div>
