--- a/spnews/siteadmin/templates/adminindex.html
+++ b/spnews/siteadmin/templates/adminindex.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% block stylesheet%}
 <link rel="stylesheet"  href="{% static 'css/style.css' %}">
+<link rel="stylesheet"  href="{% static 'css/madminscalmailn.css' %}">
 {% endblock %}
 {% block content %}
 <div class="inbox">
@@ -19,4 +20,7 @@
     </div>
   </div>
   </div>
+{% endblock %}
+
+{% block scripts %}
 {% endblock %}
